--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 A tiny web app to manage a number of links for later.
+
+Created for the 10K Contest from A List Apart (http://10k.aneventapart.com/).
